<resources>
    <string name="app_name">Inventur App Prototype</string>
    <string name="action_settings">Einstellungen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Loginmaske</string>
    <string name="second_fragment_label">Hauptmenü</string>
    <string name="next">Einloggen</string>
    <string name="previous">Ausloggen</string>
    <string name="gegenstandstypliste">Liste aller Gegenstände</string>

    <!-- Buttons die in den Views benutzt werden-->
    <string name="button_sort">Sortieren</string>
    <string name="button_zuruck">Zurück</string>
    <string name="button_bearbeiten">Bearbeiten</string>
    <string name="button_speichern">Speichern</string>
    <string name="button_gegenstand_loschen">Gegenstand löschen</string>
    <string name="button_login">Einloggen</string>
    <string name="button_logout">Ausloggen</string>
    <string name="button_einlagern">Einlagern</string>
    <string name="button_auslagern">Auslagern</string>
    <string name="button_inventur_starten">Inventur Starten</string>
    <string name="button_inventur_abbrechen">Inventur Abbrechen</string>
    <string name="button_gegenstandstypen">Gegenstandstypen</string>
    <string name="button_lagerorte">Lagerorte</string>
    <string name="button_inventur">Inventur</string>
    <string name="button_nutzerverwaltung">Nutzerverwaltung (NYI)</string>


    <!-- Labels die in den Views benutzt werden-->
    <string name="label_name">Name</string>
    <string name="label_beschreibung">Beschreibung</string>
    <string name="label_menge">Menge</string>
    <string name="label_grund">Grund</string>

    <string name="description_button_add_floating">A plus sign in a circle</string>
    <string name="button_bestatigen">Bestätigen</string>
    <string name="button_gegenstandstyp_anlegen">Gegenstandstyp anlegen</string>
    <string name="label_nicht_implementiert">Noch nicht implementiert!</string>
    <string name="label_login_explanation">Hier wird ein Login entstehen, wenn er implementiert wird</string>
    <string name="label_gegenstands_suche_nicht_implementiert">Hier würde die Möglichkeit kommen, bestehende Gegenstandstypen zu suchen und zu übernehmen. Noch nicht implementiert.</string>
</resources>