<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.gegenstand.info.GegenstandInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/content_gegenstand_info_lagerort_beschreibung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/label_beschreibung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/label_gegenstand_info_gegenstandstyp_beschreibung"
            app:layout_constraintTop_toTopOf="@+id/label_gegenstand_info_lagerort_beschreibung" />

        <TextView
            android:id="@+id/content_gegenstand_info_lagerort_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/label_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/label_gegenstand_info_gegenstandstyp_name"
            app:layout_constraintTop_toTopOf="@+id/label_gegenstand_info_lagerort_name" />

        <TextView
            android:id="@+id/label_gegenstand_info_lagerort_beschreibung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_beschreibung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_gegenstand_info_lagerort_name" />

        <TextView
            android:id="@+id/label_gegenstand_info_lagerort_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/label_name"
            app:layout_constraintEnd_toEndOf="@+id/label_gegenstand_info_gegenstandstyp_beschreibung"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_gegenstand_info_gegenstandstyp_beschreibung" />

        <TextView
            android:id="@+id/label_gegenstand_info_gegenstandstyp_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/label_name"
            app:layout_constraintEnd_toEndOf="@+id/label_gegenstand_info_gegenstandstyp_beschreibung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_gegenstand_info_gegenstandstyp_beschreibung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_beschreibung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_gegenstand_info_gegenstandstyp_name" />

        <TextView
            android:id="@+id/content_gegenstand_info_gegenstandstyp_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/label_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_gegenstand_info_gegenstandstyp_name"
            app:layout_constraintTop_toTopOf="@+id/label_gegenstand_info_gegenstandstyp_name" />

        <TextView
            android:id="@+id/content_gegenstand_info_gegenstandstyp_beschreibung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/label_beschreibung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_gegenstand_info_gegenstandstyp_beschreibung"
            app:layout_constraintTop_toTopOf="@+id/label_gegenstand_info_gegenstandstyp_beschreibung" />

        <TextView
            android:id="@+id/label_gegenstand_info_menge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/label_menge"
            app:layout_constraintEnd_toEndOf="@+id/label_gegenstand_info_lagerort_beschreibung"
            app:layout_constraintStart_toStartOf="@+id/label_gegenstand_info_lagerort_beschreibung"
            app:layout_constraintTop_toBottomOf="@+id/label_gegenstand_info_lagerort_beschreibung" />

        <TextView
            android:id="@+id/content_gegenstand_info_menge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_menge"
            app:layout_constraintBottom_toBottomOf="@+id/label_gegenstand_info_menge"
            app:layout_constraintEnd_toEndOf="@+id/content_gegenstand_info_lagerort_beschreibung"
            app:layout_constraintStart_toEndOf="@+id/label_gegenstand_info_menge"
            app:layout_constraintTop_toTopOf="@+id/label_gegenstand_info_menge"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button_gegenstand_info_einlagern"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_einlagern"
            app:layout_constraintEnd_toStartOf="@+id/button_gegenstand_info_auslagern"
            app:layout_constraintStart_toStartOf="@+id/label_gegenstand_info_menge"
            app:layout_constraintTop_toBottomOf="@+id/label_gegenstand_info_menge" />

        <Button
            android:id="@+id/button_gegenstand_info_auslagern"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/button_auslagern"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_gegenstand_info_einlagern"
            app:layout_constraintTop_toTopOf="@+id/button_gegenstand_info_einlagern" />

        <Button
            android:id="@+id/button_gegenstand_info_loeschen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/button_gegenstand_loschen"
            app:layout_constraintBottom_toBottomOf="@+id/input_gegenstand_info_loeschen_grund"
            app:layout_constraintEnd_toEndOf="@+id/button_gegenstand_info_auslagern"
            app:layout_constraintStart_toEndOf="@+id/input_gegenstand_info_loeschen_grund"
            app:layout_constraintTop_toTopOf="@+id/input_gegenstand_info_loeschen_grund" />

        <EditText
            android:id="@+id/input_gegenstand_info_loeschen_grund"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/label_grund"
            android:ems="10"
            android:hint="@string/label_grund"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/button_gegenstand_info_loeschen"
            app:layout_constraintStart_toStartOf="@+id/button_gegenstand_info_einlagern"
            app:layout_constraintTop_toBottomOf="@+id/button_gegenstand_info_einlagern" />

        <Button
            android:id="@+id/button_gegenstand_info_zuruck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/button_zuruck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_gegenstand_info_loeschen"
            app:layout_constraintStart_toStartOf="@+id/input_gegenstand_info_loeschen_grund" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>