<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.lagerort.bearbeiten.LagerortBearbeitenFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_lagerort_bearbeiten_name"
            app:layout_constraintEnd_toEndOf="@+id/label_lagerort_bearbeiten_beschreibung"
            app:layout_constraintStart_toStartOf="@+id/label_lagerort_bearbeiten_beschreibung"
            app:layout_constraintTop_toTopOf="@id/content_lagerort_bearbeiten_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/label_lagerort_bearbeiten_beschreibung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_lagerort_bearbeiten_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_beschreibung" />

        <Button
            android:id="@+id/button_lagerort_bearbeiten_speichern"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_lagerort_bearbeiten_zuruck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/button_speichern" />

        <Button
            android:id="@+id/button_lagerort_bearbeiten_zuruck"
            app:layout_constraintEnd_toStartOf="@+id/button_lagerort_bearbeiten_speichern"
            app:layout_constraintTop_toBottomOf="@id/content_lagerort_bearbeiten_beschreibung"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_zuruck" />

        <EditText
            android:id="@+id/content_lagerort_bearbeiten_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_lagerort_bearbeiten_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/label_name"
            android:ems="10"
            android:hint="@string/label_name"
            android:inputType="textPersonName"
            android:text="@string/label_name" />

        <EditText
            android:id="@+id/content_lagerort_bearbeiten_beschreibung"
            app:layout_constraintEnd_toEndOf="@+id/content_lagerort_bearbeiten_name"
            app:layout_constraintStart_toEndOf="@+id/label_lagerort_bearbeiten_beschreibung"
            app:layout_constraintTop_toBottomOf="@+id/content_lagerort_bearbeiten_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/label_beschreibung"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/label_beschreibung"
            android:inputType="textMultiLine"
            android:text="@string/label_beschreibung" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>