<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.gegenstandstyp.bearbeiten.GegenstandstypBearbeitenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_gegenstandstyp_bearbeiten_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            app:layout_constraintStart_toStartOf="@id/label_gegenstandstyp_bearbeiten_beschreibung"
            app:layout_constraintEnd_toEndOf="@id/label_gegenstandstyp_bearbeiten_beschreibung"
            app:layout_constraintTop_toTopOf="@id/content_gegenstandstyp_bearbeiten_name"
            android:labelFor="@id/content_gegenstandstyp_bearbeiten_name"
            />

        <TextView
            android:id="@+id/label_gegenstandstyp_bearbeiten_beschreibung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/content_gegenstandstyp_bearbeiten_beschreibung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/label_beschreibung"
            android:labelFor="@id/content_gegenstandstyp_bearbeiten_beschreibung"/>

        <Button
            android:id="@+id/button_gegenstandstyp_bearbeiten_speichern"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/button_speichern"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_gegenstandstyp_bearbeiten_zuruck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_gegenstandstyp_bearbeiten_speichern"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:text="@string/button_zuruck" />

        <EditText
            android:id="@+id/content_gegenstandstyp_bearbeiten_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="64dp"
            android:autofillHints="@string/label_name"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/label_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_gegenstandstyp_bearbeiten_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/content_gegenstandstyp_bearbeiten_beschreibung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/label_beschreibung"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/label_beschreibung"
            app:layout_constraintEnd_toEndOf="@id/button_gegenstandstyp_bearbeiten_speichern"
            app:layout_constraintStart_toEndOf="@id/label_gegenstandstyp_bearbeiten_beschreibung"
            app:layout_constraintTop_toBottomOf="@id/content_gegenstandstyp_bearbeiten_name"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>