<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.gegenstandstyp.info.GegenstandstypInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_gegenstandstyp_info_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/label_name"
            app:layout_constraintEnd_toEndOf="@id/label_gegenstandstyp_info_beschreibung"
            app:layout_constraintStart_toStartOf="@id/label_gegenstandstyp_info_beschreibung"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/content_gegenstandstyp_info_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/label_gegenstandstyp_info_name"
            app:layout_constraintTop_toTopOf="@id/label_gegenstandstyp_info_name"
            app:layout_constraintBottom_toBottomOf="@id/label_gegenstandstyp_info_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="16dp"
             />

        <TextView
            android:id="@+id/label_gegenstandstyp_info_beschreibung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_beschreibung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_gegenstandstyp_info_name" />

        <TextView
            android:id="@+id/content_gegenstandstyp_info_beschreibung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_gegenstandstyp_info_beschreibung"
            app:layout_constraintTop_toTopOf="@id/label_gegenstandstyp_info_beschreibung" />

        <Button
            android:id="@+id/button_gegenstandstyp_info_zuruck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:text="@string/button_zuruck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_gegenstandstyp_info_bearbeiten"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/gegenstandsliste"
            android:name="de.dhbw.ka.inventurappprototype.gui.gegenstand.liste.GegenstandFragmentListe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:tag="container_gegenstandsinfo_gegenstandliste"
            app:layout_constraintBottom_toTopOf="@id/button_gegenstandstyp_info_zuruck"
            app:layout_constraintEnd_toEndOf="@id/content_gegenstandstyp_info_beschreibung"
            app:layout_constraintStart_toStartOf="@id/label_gegenstandstyp_info_beschreibung"
            app:layout_constraintTop_toBottomOf="@id/label_gegenstandstyp_info_beschreibung" />

        <Button
            android:id="@+id/button_gegenstandstyp_info_bearbeiten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/button_bearbeiten"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>